crates/watt_tests/src/snapshots/watt_tests__lex__escape_sequence_6.snap
---
source: crates/watt_tests/src/lex.rs
expression: "\n\"\\u{00C}\"\n        "
---
Source code:

"\u{00C}"
        

Tokens:
lex::invalid_escape_sequence

  × invalid escape sequence.
   ╭─[buggy:2:3]
 1 │ 
 2 │ "\u{00C}"
   ·   ───┬──
   ·      ╰── this escape sequence isn't valid.
 3 │         
   ╰────
  help: expected hex digit.
