crates/watt_tests/src/snapshots/watt_tests__lex__escape_sequence_8.snap
---
source: crates/watt_tests/src/lex.rs
expression: "\n\"\\U{приветик}\"\n        "
---
Source code:

"\U{приветик}"
        

Tokens:
lex::invalid_escape_sequence

  × invalid escape sequence.
   ╭─[buggy:2:3]
 1 │ 
 2 │ "\U{приветик}"
   ·   ─┬─
   ·    ╰── this escape sequence isn't valid.
 3 │         
   ╰────
  help: expected hex digit.
